--- a/css/login.css
+++ b/css/login.css
@@ -10,7 +10,11 @@
 
     /* za navigaciju */
     --transition-speed: 600ms;
+    
+    /* tako da se ne prilagodava za dark mode */
+    color-scheme: light only;
 }
+
 
 body{
     margin: 0;
