--- a/rotated/rotated.css
+++ b/rotated/rotated.css
@@ -10,7 +10,7 @@ body {
 
 .title {
     position: fixed;
-    bottom: 50px;
+    top: 50px;
     left: 20px;
 
     font-size: 2rem;
